--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "homepage": "https://github.com/BastienBoymond/IntraBot#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "change-url": "^1.1.2",
     "discord.js": "^12.5.1",
     "fs": "0.0.1-security",
+    "modify-image-url-md": "0.0.1",
     "node": "^15.10.0"
   }
 }
